# heavy_calculations_quaternions

./: .gitignore  index.html  note.md  package-lock.json  package.json  readme.md
docs/: mat3.doc.md  quat.doc.md  vec3.doc.md
public/: model.json
rotation-core/: Cargo.toml
rotation-core/src/: lib.rs  main.rs  mat3.rs  objp.rs  quat.rs  vec3.rs
src/: index.css  main.js
src/components/: Quaternion.js  Quaternion.style.css  Rotmat.js
src/components/WebGL/: index.css  index.js  initScene.js
src/components/WebGL/lib/: applyNormalize.js  buildResultQuaternion.js  createRotationItem.js  index.js  makeArrow.js  normalizeModel.js  quatToAxisAngle.js  updateUnits.js
src/components/rotation-core-wasm/: package.json  rotation_core.d.ts  rotation_core.js  rotation_core_bg.wasm  rotation_core_bg.wasm.d.ts
src/math/: mat.js  qut.js  vec.js  vec3.js
src/utils/: Component.js
