[package]
name = "rotation-core"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

# cdylib → только для WASM / C (без Rust API)
# rlib → делает crate доступным для Rust (use ...)

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
wasm-bindgen = "0.2"
